--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,31 @@
 	</repositories>	
 	
 	<dependencies>
+
+<!-- Jar do Theme do Bootstrap -->
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>1.0.10</version>
+        </dependency>
 		<!-- PrimeFaces -->
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
 			  <version>7.0</version>
+			   <scope>compile</scope>
 		</dependency>
-		
+		<dependency>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.faces</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		<dependency>
+	    <groupId>javax.faces</groupId>
+		    <artifactId>javax.faces-api</artifactId>
+		    <version>2.2</version>
+		    <scope>provided</scope>
+		</dependency>
 		<!-- JSF 2 -->
 		<dependency>
 		    <groupId>com.sun.faces</groupId>
