--- a/pom.xml
+++ b/pom.xml
@@ -131,11 +131,16 @@
 			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <version>5.6.2</version>
+    		<scope>test</scope>
 		</dependency>
 	</dependencies>
 
