--- a/pom.xml
+++ b/pom.xml
@@ -85,21 +85,12 @@
 			<version>2.1</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- CDI / Weld -->
-		<!-- https://mvnrepository.com/artifact/org.jboss.weld.servlet/weld-servlet -->
-<!-- 		<dependency> -->
-<!-- 		    <groupId>org.jboss.weld.servlet</groupId> -->
-<!-- 		    <artifactId>weld-servlet</artifactId> -->
-<!-- 		    <version>2.2.9.Final</version> -->
-<!-- 		</dependency> -->
-
-	<dependency>
-	    <groupId>javax.enterprise</groupId>
-	    <artifactId>cdi-api</artifactId>
-	    <version>2.0</version>
-	    <scope>provided</scope>
-	</dependency>
+		<dependency>
+		    <groupId>javax.enterprise</groupId>
+		    <artifactId>cdi-api</artifactId>
+		    <version>2.0</version>
+		    <scope>provided</scope>
+		</dependency>
 		<!-- JPA / Hibernate -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -142,6 +133,30 @@
 		    <version>5.6.2</version>
     		<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.21.0</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.junit.platform</groupId>
+		    <artifactId>junit-platform-runner</artifactId>
+		    <version>1.2.0</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		     <groupId>org.junit.vintage</groupId>
+		     <artifactId>junit-vintage-engine</artifactId>
+		     <version>5.2.0</version>
+		     <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
+		    <version>2.23.0</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -155,6 +170,17 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+			</plugin>
+			<plugin>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.19.1</version>
+			    <dependencies>
+			        <dependency>
+			             <groupId>org.junit.platform</groupId>
+			             <artifactId>junit-platform-surefire-provider</artifactId>
+			             <version>1.0.1</version>
+			         </dependency>
+			     </dependencies>
 			</plugin>
 		</plugins>
 	</build>
